--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -134,29 +134,27 @@ strong {
 }
 
 #idImgHead {
+  display: inline;
+  vertical-align: middle;
+  text-align: center;
+  border: none;
   position: relative;
-  max-width: 739px;
+  max-width: 720px;
   padding: 5px;
   margin: 15px 10px 10px 30px;
-/*
-  border: 1px solid #ebebeb;
-*/
 
   box-shadow: 0 0 5px #ebebeb;
   -webkit-box-shadow: 0 0 5px #ebebeb;
   -moz-box-shadow: 0 0 5px #ebebeb;
   -o-box-shadow: 0 0 5px #ebebeb;
   -ms-box-shadow: 0 0 5px #ebebeb;
+
 }
 
-p img {
-  display: inline;
-  margin: 0;
-  padding: 0;
-  vertical-align: middle;
-  text-align: center;
-  border: none;
+/*
+#idImgHead {
 }
+*/
 
 pre, code {
   width: 100%;
