--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -51,7 +51,7 @@ Theme Styles
 body {
   box-sizing: border-box;
   color:#373737;
-  background: #212121;
+  background: #f2f2f2;
   font-size: 16px;
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -255,6 +255,7 @@ form {
 
 .navbar {
   margin-bottom: 0px;
+  border-radius: 0px;
 }
 
 /*******************************************************************************
@@ -399,13 +400,6 @@ Small Device Styles
     display: none;
   }
 
-  /*
-  .inner {
-    min-width: 320px;
-    max-width: 480px;
-  }
-	  */
-
   #project_title {
   font-size: 32px;
   }
@@ -439,5 +433,4 @@ Small Device Styles
     max-width: 480px;
     font-size: 11px;
   }
-
 }
