--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -97,8 +97,13 @@ p {
   margin: 10px 0 15px 0;
 }
 
+footer {
+  padding: 10px 10px 10px 10px;
+}
+
 footer p {
   color: #f2f2f2;
+  margin: 5px 10px 5px 10px;
 }
 
 a {
@@ -262,17 +267,6 @@ form {
 Full-Width Styles
 *******************************************************************************/
 
-.outer {
-  width: 100%;
-}
-
-.inner {
-  position: relative;
-  max-width: 640px;
-  padding: 20px 10px;
-  margin: 0 auto;
-}
-
 #forkme_banner {
   //display: block;
   //position: absolute;
@@ -288,15 +282,6 @@ Full-Width Styles
   border-bottom-right-radius: 2px;
 }
 
-#header_wrap {
-  background: #292929;
-  background: -moz-linear-gradient(top, #292929, #000000);
-  background: -webkit-linear-gradient(top, #292929, #000000);
-  background: -ms-linear-gradient(top, #292929, #000000);
-  background: -o-linear-gradient(top, #292929, #000000);
-  background: linear-gradient(top, #292929, #000000);
-}
-
 #idDivHead {
   background: #292929;
   background: -moz-linear-gradient(top, #292929, #000000);
@@ -304,10 +289,6 @@ Full-Width Styles
   background: -ms-linear-gradient(top, #292929, #000000);
   background: -o-linear-gradient(top, #292929, #000000);
   background: linear-gradient(top, #292929, #000000);
-}
-
-#header_wrap .inner {
-  padding: 50px 10px 30px 10px;
 }
 
 #project_title {
@@ -381,7 +362,7 @@ Full-Width Styles
   padding-top: 40px;
 }
 
-#footer_wrap {
+#idDivFooter {
   background: #212121;
 }
 
